# Traycer

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
Application/: CMakeLists.txt  main.cpp
CMake/: CompileFlags.cmake  FindSFML.cmake
Documentation/: Doxyfile.in
Includes/Core/: Camera.hpp  Color.hpp  Constants.hpp  Grid.hpp  Parser.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Vector.hpp  Window.hpp  geometry.hpp
Includes/Gui/: GuiGrid.hpp  GuiWindow.hpp
Includes/Lights/: AmbientLight.hpp  AreaLight.hpp  BaseLight.hpp  DirectionalLight.hpp  PointLight.hpp  SpotLight.hpp
Includes/Shapes/: BaseShape.hpp  Sphere.hpp
Includes/Utils/: IO.hpp  Lighting.hpp
References/: reference.ppm
Sources/Core/: Camera.cpp  Color.cpp  Grid.cpp  Parser.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Vector.cpp  Window.cpp
Sources/Gui/: GuiGrid.cpp  GuiWindow.cpp
Sources/Lights/: AmbientLight.cpp  AreaLight.cpp  BaseLight.cpp  DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
Sources/Shapes/: BaseShape.cpp  Sphere.cpp
Sources/Utils/: IO.cpp  Lighting.cpp
Submodules/SFML/: .git 2
Submodules/SFML/cmake/: .Config 2.cmake.icloud  .Macros 2.cmake.icloud  .SFMLConfig.cmake 2.in.icloud  .SFMLConfigDependencies.cmake 2.in.icloud
Submodules/SFML/cmake/Modules/: .FindEGL 2.cmake.icloud  .FindFLAC 2.cmake.icloud  .FindFreetype 2.cmake.icloud  .FindGLES 2.cmake.icloud  .FindUDev 2.cmake.icloud  .FindVorbis 2.cmake.icloud
Submodules/SFML/cmake/toolchains/: .android.toolchain 2.cmake.icloud  .iOS.toolchain 2.cmake.icloud
Submodules/SFML/doc/: .doxyfile 2.in.icloud  .doxygen 2.css.icloud  .footer 2.html.icloud  .header.html 2.in.icloud
Submodules/SFML/examples/android/: .build 2.gradle.icloud  .gradle 2.properties.icloud
Submodules/SFML/examples/android/app/: .app 2.iml.icloud  .build 2.gradle.icloud  .proguard-rules 2.pro.icloud
Submodules/SFML/examples/cocoa/resources/: .Cocoa-Info 2.plist.icloud
Submodules/SFML/examples/iOS/resources/: .orchestral 2.ogg.icloud
Submodules/SFML/examples/pong/resources/: .ball 2.wav.icloud
Submodules/SFML/examples/sound/resources/: .canary 2.wav.icloud  .ding 2.flac.icloud
Submodules/SFML/extlibs/: .Android 2.mk.icloud
Submodules/SFML/extlibs/libs-android/armeabi/: .libFLAC 2.a.icloud  .libFLAC++ 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal 2.so.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-android/armeabi-v7a/: .libFLAC 2.a.icloud  .libFLAC++ 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal 2.so.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-android/mips/: .libFLAC 2.a.icloud  .libFLAC++ 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal 2.so.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-android/x86/: .libFLAC 2.a.icloud  .libFLAC++ 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal 2.so.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-ios/: .libflac 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libvorbis 2.a.icloud
Submodules/SFML/extlibs/libs-mingw/x64/: .libFLAC 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal32 2.a.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-mingw/x86/: .libFLAC 2.a.icloud  .libfreetype 2.a.icloud  .libogg 2.a.icloud  .libopenal32 2.a.icloud  .libvorbis 2.a.icloud  .libvorbisenc 2.a.icloud  .libvorbisfile 2.a.icloud
Submodules/SFML/extlibs/libs-msvc-universal/x64/: .flac 2.lib.icloud  .ogg 2.lib.icloud  .openal32 2.lib.icloud  .vorbis 2.lib.icloud  .vorbisenc 2.lib.icloud  .vorbisfile 2.lib.icloud
Submodules/SFML/extlibs/libs-msvc-universal/x86/: .flac 2.lib.icloud  .freetype 2.lib.icloud  .ogg 2.lib.icloud  .vorbis 2.lib.icloud  .vorbisenc 2.lib.icloud  .vorbisfile 2.lib.icloud
Submodules/SFML/extlibs/libs-msvc/x64/: .flac 2.lib.icloud  .freetype 2.lib.icloud  .ogg 2.lib.icloud  .vorbis 2.lib.icloud  (+2 more)
Submodules/SFML/src/SFML/: .Android 2.mk.icloud
Submodules/SFML/tools/pkg-config/: .sfml-all.pc 2.in.icloud  .sfml-audio.pc 2.in.icloud  .sfml-graphics.pc 2.in.icloud  .sfml-network.pc 2.in.icloud  .sfml-system.pc 2.in.icloud  .sfml-window.pc 2.in.icloud
Submodules/TGUI/: .git 2
Submodules/TGUI/doc/: .footer 2.html.icloud
Submodules/TGUI/include/TGUI/: String 2.hpp
Submodules/TGUI/src/TGUI/: String 2.cpp
Tests/: CMakeLists.txt  main.cpp
Themes/: default.txt
docs/: _config.yml  index.md
docs/_layouts/: default.html
(+23 files in other folders)
